--- a/Create testsets.ipynb
+++ b/Create testsets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "7267362e-1760-4070-ba04-41704694af7c",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Features list length: 154\n",
+      "1\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "11ede8a8-1bf9-4143-b64f-a74b4dc0ac53",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "94d26018-e12e-41d6-b99b-f15cef8ae0ec",
    "metadata": {},
    "outputs": [],
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "bdd906cf-a6ee-4100-9e74-32a5fa123cd5",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Dates\n",
     "start_date = pd.to_datetime('1952-12-31')\n",
-    "end_date = pd.to_datetime('2020-12-31')\n",
+    "end_date = pd.to_datetime('2022-12-31')\n",
     "#Threshold \n",
     "thres = 0.95 #(vi beholder de øverste 10%, hvis den er lig 0.9)"
    ]
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "f6196b1b-0edb-4d8e-8cd5-32b52a76b35e",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "f8238c72-42df-4248-a376-a7b35f2ba4ef",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "7e2a16dc-c813-417f-a47a-310b74a6d598",
    "metadata": {},
    "outputs": [
@@ -127,37 +127,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        eom_ret     id                  eom  valid_ret excntry         me  \\\n",
-      "220  1971-01-31  10006  1970-12-31 00:00:00       True     USA  256.13875   \n",
-      "221  1971-02-28  10006  1971-01-31 00:00:00       True     USA  267.36675   \n",
-      "222  1971-03-31  10006  1971-02-28 00:00:00       True     USA  262.45450   \n",
-      "223  1971-04-30  10006  1971-03-31 00:00:00       True     USA  286.31400   \n",
-      "224  1971-05-31  10006  1971-04-30 00:00:00       True     USA  332.62950   \n",
+      "      eom_ret     id                  eom  valid_ret excntry         me   sic  \\\n",
+      "4  1953-01-31  10006  1952-12-31 00:00:00       True     USA  24.218250  3740   \n",
+      "5  1953-02-28  10006  1953-01-31 00:00:00       True     USA  23.394500  3740   \n",
+      "6  1953-03-31  10006  1953-02-28 00:00:00       True     USA  26.030500  3740   \n",
+      "7  1953-04-30  10006  1953-03-31 00:00:00       True     USA  24.053500  3740   \n",
+      "8  1953-05-31  10006  1953-04-30 00:00:00       True     USA  25.124375  3740   \n",
       "\n",
-      "      sic size_grp  ret_exc_lead1m  niq_su  ...     ni_be    ocf_at  \\\n",
-      "220  3743    large        0.040059     NaN  ...  0.096444  0.094197   \n",
-      "221  3743    large       -0.009118     NaN  ...  0.096444  0.094197   \n",
-      "222  3743    large        0.087985     NaN  ...  0.096444  0.094197   \n",
-      "223  3743    large        0.158961     NaN  ...  0.096444  0.094197   \n",
-      "224  3743    large       -0.054182     NaN  ...  0.076721 -0.004688   \n",
+      "  size_grp  ret_exc_lead1m  niq_su  ...     ni_be    ocf_at  ocf_at_chg1  \\\n",
+      "4    small       -0.035634     NaN  ...  0.100695  0.084642     0.038812   \n",
+      "5    small        0.111274     NaN  ...  0.100695  0.084642     0.038812   \n",
+      "6    small       -0.058854     NaN  ...  0.100695  0.084642     0.038812   \n",
+      "7    small        0.042885     NaN  ...  0.100695  0.084642     0.038812   \n",
+      "8    small        0.263852     NaN  ...  0.100695  0.084642     0.038812   \n",
       "\n",
-      "     ocf_at_chg1  mispricing_perf  mispricing_mgmt  qmj  qmj_prof  qmj_growth  \\\n",
-      "220          NaN         0.491802              NaN  NaN  0.290183         NaN   \n",
-      "221          NaN         0.467551              NaN  NaN  0.328256         NaN   \n",
-      "222          NaN         0.423788              NaN  NaN  0.341944         NaN   \n",
-      "223          NaN         0.369762              NaN  NaN  0.353127         NaN   \n",
-      "224    -0.098885         0.405492         0.621104  NaN -0.485959         NaN   \n",
+      "   mispricing_perf  mispricing_mgmt  qmj  qmj_prof  qmj_growth  qmj_safety  \\\n",
+      "4         0.575019         0.667461  NaN  0.395463         NaN   -0.223198   \n",
+      "5         0.654311         0.663235  NaN  0.390803         NaN   -0.153599   \n",
+      "6         0.565347         0.662090  NaN  0.428745         NaN   -0.166422   \n",
+      "7         0.676796         0.703290  NaN  0.439165         NaN   -0.223840   \n",
+      "8         0.673364         0.664946  NaN  0.557875         NaN   -0.081148   \n",
       "\n",
-      "     qmj_safety  ctff_test  \n",
-      "220   -0.243150      False  \n",
-      "221   -0.237181      False  \n",
-      "222   -0.225523      False  \n",
-      "223   -0.257905      False  \n",
-      "224   -0.208427      False  \n",
+      "   ctff_test  \n",
+      "4      False  \n",
+      "5      False  \n",
+      "6      False  \n",
+      "7      False  \n",
+      "8      False  \n",
       "\n",
       "[5 rows x 163 columns]\n",
-      "Antal observationer efter filtrering: 1237979\n",
-      "1970-12-31 00:00:00\n"
+      "Antal observationer efter filtrering: 1365746\n",
+      "1952-12-31 00:00:00\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "e5d980f2-7a7a-4972-92ba-400432334800",
    "metadata": {},
    "outputs": [
@@ -184,8 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grænseværdi for top 15% virksomheder: 6791.6038723624815\n",
-      "Antal unikke virksomheder i top 15%: 610\n"
+      "Grænseværdi for top 15% virksomheder: 6382.731123102463\n",
+      "Antal unikke virksomheder i top 15%: 616\n"
      ]
     }
    ],
@@ -209,20 +209,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "e77d2034-f5a5-4d13-83da-c7c9ba7c379c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([10078, 10104, 10107, 10138, 10145, 10147, 10299, 10324, 10401, 10516,\n",
+       "Index([10078, 10104, 10107, 10138, 10147, 10299, 10324, 10401, 10696, 11042,\n",
        "       ...\n",
        "       93089, 93094, 93096, 93101, 93132, 93150, 93296, 93312, 93338, 93436],\n",
-       "      dtype='int32', name='id', length=610)"
+       "      dtype='int32', name='id', length=616)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,20 +233,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "b1dd772b-74e1-40aa-933e-f69ee4555b7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([10078, 10104, 10107, 10138, 10145, 10147, 10299, 10324, 10401, 10516,\n",
+       "Index([10078, 10104, 10107, 10138, 10147, 10299, 10324, 10401, 10696, 11042,\n",
        "       ...\n",
        "       93089, 93094, 93096, 93101, 93132, 93150, 93296, 93312, 93338, 93436],\n",
-       "      dtype='int32', name='id', length=610)"
+       "      dtype='int32', name='id', length=616)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "94967d1f-d29a-4031-8363-7d896a244d1d",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Antal unikke virksomheder med data på både første og sidste dato: 64\n"
+      "Antal unikke virksomheder med data på både første og sidste dato: 180\n"
      ]
     }
    ],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "33a67c9e-2251-470b-be7d-9c1eabb3ec76",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "b8fee8c5-88b6-4d6f-80b8-a5fbcdb3b093",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "1a48dadb-043e-48ba-8a27-f4cae402c7ff",
    "metadata": {},
    "outputs": [
@@ -334,22 +334,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtrering udført. Antal rækker efter filtrering: 636\n",
-      "Fil gemt som ./data_test/risk_free_test.csv\n",
+      "Filtrering udført. Antal rækker efter filtrering: 841\n",
+      "Fil gemt som ./data_test/risk_free_thres_test.csv\n",
       "Fil ./Data/usa_dsf.parquet indlæst med succes. Antal rækker før filtrering: 176877668\n",
-      "Filtrering af ID'er udført. Antal rækker efter filtrering: 1343216\n",
+      "Filtrering af ID'er udført. Antal rækker efter filtrering: 2072920\n",
       "Bruger 'date' i stedet for 'eom'.\n",
-      "Filtrering på startdato 1970-12-31 00:00:00 udført. Antal rækker efter filtrering: 855409\n",
-      "Antal unikke virksomheder efter filtrering: 64\n",
-      "Fil gemt som ./data_test/usa_dsf_test.parquet\n",
-      "Fil ./Data/usa.parquet indlæst med succes. Antal rækker før filtrering: 1373911\n",
-      "Filtrering af ID'er udført. Antal rækker efter filtrering: 51584\n",
-      "Filtrering på startdato 1970-12-31 00:00:00 udført. Antal rækker efter filtrering: 40699\n",
-      "Antal unikke virksomheder efter filtrering: 64\n",
-      "Fil gemt som ./data_test/usa_test.parquet\n",
+      "Filtrering på startdato 1952-12-31 00:00:00 udført. Antal rækker efter filtrering: 1953639\n",
+      "Antal unikke virksomheder efter filtrering: 180\n",
+      "Fil gemt som ./data_test/usa_dsf_thres_test.parquet\n",
+      "Fil ./Data/usa_rvol.parquet indlæst med succes. Antal rækker før filtrering: 1373911\n",
+      "Filtrering af ID'er udført. Antal rækker efter filtrering: 89046\n",
+      "Filtrering på startdato 1952-12-31 00:00:00 udført. Antal rækker efter filtrering: 88864\n",
+      "Antal unikke virksomheder efter filtrering: 180\n",
+      "Fil gemt som ./data_test/usa_thres_test.parquet\n",
       "Filen er indlæst og filtreret succesfuldt.\n",
-      "Fil gemt som ./data_test/market_returns_test.csv med 636 rækker.\n",
-      "All missing excludes 0.17% of the observations\n"
+      "Fil gemt som data_test/market_returns_thres_test.csv med 841 rækker.\n",
+      "All missing excludes 42.07% of the observations\n",
+      "Data gemt i: ./data_test/world_ret_thres_test.csv\n",
+      "           id excntry        eom          me       ret  ret_local   ret_exc  \\\n",
+      "260479  18411     USA 1952-12-31  273.280000 -0.015385  -0.015385 -0.017138   \n",
+      "260484  14277     USA 1952-12-31    9.375000 -0.016393  -0.016393 -0.018146   \n",
+      "260502  18163     USA 1952-12-31  649.012500 -0.014599  -0.014599 -0.016352   \n",
+      "260504  15720     USA 1952-12-31  209.713875  0.000000   0.000000 -0.001753   \n",
+      "260517  13856     USA 1952-12-31   68.305000  0.250000   0.250000  0.248247   \n",
+      "\n",
+      "        source_crsp  \n",
+      "260479            1  \n",
+      "260484            1  \n",
+      "260502            1  \n",
+      "260504            1  \n",
+      "260517            1  \n",
+      "             id excntry        eom             me       ret  ret_local  \\\n",
+      "24069025  75607     USA 2022-12-31   13693.770195 -0.066638  -0.066638   \n",
+      "24069040  12062     USA 2022-12-31   20863.527621 -0.021687  -0.021687   \n",
+      "24069064  76076     USA 2022-12-31  195710.024410 -0.041834  -0.041834   \n",
+      "24069071  75828     USA 2022-12-31   33599.500084 -0.065759  -0.065759   \n",
+      "24069138  10696     USA 2022-12-31   63674.099808 -0.031525  -0.031525   \n",
+      "\n",
+      "           ret_exc  source_crsp  \n",
+      "24069025 -0.070017            1  \n",
+      "24069040 -0.025066            1  \n",
+      "24069064 -0.045213            1  \n",
+      "24069071 -0.069138            1  \n",
+      "24069138 -0.034904            1  \n",
+      "Shape efter dato-filter: (91364, 8)\n",
+      "Antal unikke ID'er efter dato-filter: 180\n"
      ]
     }
    ],
@@ -363,6 +392,14 @@
     "dataret = data_run_files.monthly_returns(risk_free, h_list, output_path_usa)\n",
     "data_run_files.world_ret_monthly_test_filter(file_path_id_test, file_path_world_ret, start_date, end_date, output_file = world_ret_thres_test_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a6d9818-ef32-447b-867f-89e305322e22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
