Tilføjet en del funktioner, der er tættere på at virke.

--- a/Create testsets.ipynb
+++ b/Create testsets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 94,
    "id": "7267362e-1760-4070-ba04-41704694af7c",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Features list length: 154\n",
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n",
       "1\n"
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 95,
    "id": "11ede8a8-1bf9-4143-b64f-a74b4dc0ac53",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 96,
    "id": "94d26018-e12e-41d6-b99b-f15cef8ae0ec",
    "metadata": {},
    "outputs": [],
@@ -68,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 97,
    "id": "bdd906cf-a6ee-4100-9e74-32a5fa123cd5",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Dates\n",
     "start_date = pd.to_datetime('1952-12-31')\n",
-    "end_date = pd.to_datetime('2020-12-31')\n",
+    "end_date = pd.to_datetime('2022-12-31')\n",
     "#Threshold \n",
     "thres = 0.95 #(vi beholder de øverste 10%, hvis den er lig 0.9)"
    ]
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "id": "f6196b1b-0edb-4d8e-8cd5-32b52a76b35e",
    "metadata": {},
    "outputs": [
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 99,
    "id": "f8238c72-42df-4248-a376-a7b35f2ba4ef",
    "metadata": {},
    "outputs": [],
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 100,
    "id": "7e2a16dc-c813-417f-a47a-310b74a6d598",
    "metadata": {},
    "outputs": [
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 101,
    "id": "e5d980f2-7a7a-4972-92ba-400432334800",
    "metadata": {},
    "outputs": [
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 102,
    "id": "e77d2034-f5a5-4d13-83da-c7c9ba7c379c",
    "metadata": {},
    "outputs": [
@@ -223,7 +224,7 @@
        "      dtype='int32', name='id', length=616)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 103,
    "id": "b1dd772b-74e1-40aa-933e-f69ee4555b7e",
    "metadata": {},
    "outputs": [
@@ -247,7 +248,7 @@
        "      dtype='int32', name='id', length=616)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +259,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
+   "id": "bfdc662a-0481-4d2e-b547-21c82e4eada2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "id": "94967d1f-d29a-4031-8363-7d896a244d1d",
    "metadata": {},
    "outputs": [
@@ -286,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 105,
    "id": "33a67c9e-2251-470b-be7d-9c1eabb3ec76",
    "metadata": {},
    "outputs": [
@@ -316,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 106,
    "id": "b8fee8c5-88b6-4d6f-80b8-a5fbcdb3b093",
    "metadata": {},
    "outputs": [],
@@ -327,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 107,
    "id": "1a48dadb-043e-48ba-8a27-f4cae402c7ff",
    "metadata": {},
    "outputs": [
@@ -335,7 +344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtrering udført. Antal rækker efter filtrering: 817\n",
+      "Filtrering udført. Antal rækker efter filtrering: 841\n",
       "Fil gemt som ./data_fifty/risk_free_test.csv\n",
       "Fil ./Data/usa_dsf.parquet indlæst med succes. Antal rækker før filtrering: 176877668\n",
       "Filtrering af ID'er udført. Antal rækker efter filtrering: 2072920\n",
@@ -349,7 +358,7 @@
       "Antal unikke virksomheder efter filtrering: 180\n",
       "Fil gemt som ./data_fifty/usa_test.parquet\n",
       "Filen er indlæst og filtreret succesfuldt.\n",
-      "Fil gemt som ./data_fifty/market_returns_test.csv med 817 rækker.\n",
+      "Fil gemt som ./data_fifty/market_returns_test.csv med 841 rækker.\n",
       "All missing excludes 42.07% of the observations\n",
       "Data gemt i: ./data_fifty/world_ret_test.csv\n",
       "           id excntry        eom          me       ret  ret_local   ret_exc  \\\n",
@@ -366,19 +375,19 @@
       "260504            1  \n",
       "260517            1  \n",
       "             id excntry        eom             me       ret  ret_local  \\\n",
-      "22073535  75607     USA 2020-12-31   12197.860403  0.139879   0.139879   \n",
-      "22073553  12062     USA 2020-12-31   19825.770297  0.018565   0.018565   \n",
-      "22073579  76076     USA 2020-12-31  189091.751500  0.040214   0.040214   \n",
-      "22073587  75828     USA 2020-12-31   41356.801758  0.125401   0.125401   \n",
-      "22073664  10696     USA 2020-12-31   76183.726408 -0.011460  -0.011460   \n",
+      "24069025  75607     USA 2022-12-31   13693.770195 -0.066638  -0.066638   \n",
+      "24069040  12062     USA 2022-12-31   20863.527621 -0.021687  -0.021687   \n",
+      "24069064  76076     USA 2022-12-31  195710.024410 -0.041834  -0.041834   \n",
+      "24069071  75828     USA 2022-12-31   33599.500084 -0.065759  -0.065759   \n",
+      "24069138  10696     USA 2022-12-31   63674.099808 -0.031525  -0.031525   \n",
       "\n",
       "           ret_exc  source_crsp  \n",
-      "22073535  0.139819            1  \n",
-      "22073553  0.018505            1  \n",
-      "22073579  0.040154            1  \n",
-      "22073587  0.125341            1  \n",
-      "22073664 -0.011520            1  \n",
-      "Shape efter dato-filter: (87044, 8)\n",
+      "24069025 -0.070017            1  \n",
+      "24069040 -0.025066            1  \n",
+      "24069064 -0.045213            1  \n",
+      "24069071 -0.069138            1  \n",
+      "24069138 -0.034904            1  \n",
+      "Shape efter dato-filter: (91364, 8)\n",
       "Antal unikke ID'er efter dato-filter: 180\n"
      ]
     }
@@ -398,30 +407,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6bdb5f6c-1b5f-45bc-9285-0da00323d182",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d73a3bbb-211a-4018-92ff-e5cf0acf3962",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f098a0d-9482-46ac-9b45-7953690da92f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e0f661c-db72-4d5a-ae03-36c8642a0f79",
    "metadata": {},
    "outputs": [],
    "source": []
