--- a/Fit_models_Jonas-Copy1.ipynb
+++ b/Fit_models_Jonas-Copy1.ipynb
@@ -57,6 +57,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f3787865-f27b-4d65-a3c8-a8e7c45e8a66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hej"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d6ec3f4b-5301-4b0e-9de3-f355eadfe97c",
    "metadata": {},
