--- a/R_port_pmfl.ipynb
+++ b/R_port_pmfl.ipynb
@@ -17000,74 +17000,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "id": "4b90e563-897d-4a8c-844e-1eb84a6f9210",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing g: 0.049787068367863944\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-01-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-02-28\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-03-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-04-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-05-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-06-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-07-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-08-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-09-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-10-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-11-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2019-12-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-01-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-02-29\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-03-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-04-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-05-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-06-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-07-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-08-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-09-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-10-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-11-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2020-12-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-01-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-02-28\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-03-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-04-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-05-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-06-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-07-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-08-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-09-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-10-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-11-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2021-12-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2022-01-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2022-02-28\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2022-03-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2022-04-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2022-05-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2022-06-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2022-07-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2022-08-31\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2022-09-30\n",
-      "Advarsel: Ingen signal fundet for lookback-dato 2022-10-31\n",
-      "pfml_input_fun took 138.04 sec\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'str'",
+     "ename": "NameError",
+     "evalue": "name 'time' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[88], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[0;32m      2\u001b[0m warnings\u001b[38;5;241m.\u001b[39mfilterwarnings(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m pfml \u001b[38;5;241m=\u001b[39m pfml_implement(\n\u001b[0;32m      5\u001b[0m     data_tc\u001b[38;5;241m=\u001b[39mchars, \u001b[38;5;66;03m#rigtig\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     cov_list\u001b[38;5;241m=\u001b[39mbarra_cov, \u001b[38;5;66;03m#rigtig\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     lambda_list\u001b[38;5;241m=\u001b[39mlambda_list, \u001b[38;5;66;03m#rigtig\u001b[39;00m\n\u001b[0;32m      8\u001b[0m     features\u001b[38;5;241m=\u001b[39mfeatures, \u001b[38;5;66;03m#rigtig\u001b[39;00m\n\u001b[0;32m      9\u001b[0m     risk_free\u001b[38;5;241m=\u001b[39mrisk_free, \u001b[38;5;66;03m# forkert\u001b[39;00m\n\u001b[0;32m     10\u001b[0m     wealth\u001b[38;5;241m=\u001b[39mwealth, \u001b[38;5;66;03m# forkert\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     mu\u001b[38;5;241m=\u001b[39mpf_set[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmu\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;66;03m#rigtig\u001b[39;00m\n\u001b[0;32m     12\u001b[0m     gamma_rel\u001b[38;5;241m=\u001b[39mpf_set[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgamma_rel\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;66;03m#rigtig\u001b[39;00m\n\u001b[0;32m     13\u001b[0m     dates_full\u001b[38;5;241m=\u001b[39mdates_m2,\n\u001b[0;32m     14\u001b[0m     dates_oos\u001b[38;5;241m=\u001b[39mdates_oos,  \u001b[38;5;66;03m# forkert\u001b[39;00m\n\u001b[0;32m     15\u001b[0m     lb\u001b[38;5;241m=\u001b[39mpf_set[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlb_hor\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;66;03m# rigtig\u001b[39;00m\n\u001b[0;32m     16\u001b[0m     hp_years\u001b[38;5;241m=\u001b[39mhp_years, \u001b[38;5;66;03m# forkert\u001b[39;00m\n\u001b[0;32m     17\u001b[0m     rff_feat\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;66;03m#rigtig\u001b[39;00m\n\u001b[0;32m     18\u001b[0m     g_vec\u001b[38;5;241m=\u001b[39msettings[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpf_ml\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mg_vec\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;66;03m# rigtig\u001b[39;00m\n\u001b[0;32m     19\u001b[0m     p_vec\u001b[38;5;241m=\u001b[39msettings[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpf_ml\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mp_vec\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;66;03m# rigtig\u001b[39;00m\n\u001b[0;32m     20\u001b[0m     l_vec\u001b[38;5;241m=\u001b[39msettings[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpf_ml\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ml_vec\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;66;03m# rigtig\u001b[39;00m\n\u001b[0;32m     21\u001b[0m     scale\u001b[38;5;241m=\u001b[39msettings[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpf_ml\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscale\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;66;03m# rigtig\u001b[39;00m\n\u001b[0;32m     22\u001b[0m     orig_feat\u001b[38;5;241m=\u001b[39msettings[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpf_ml\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124morig_feat\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;66;03m#rigtig\u001b[39;00m\n\u001b[0;32m     23\u001b[0m     \u001b[38;5;28miter\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m,                \u001b[38;5;66;03m# rigtig\u001b[39;00m\n\u001b[0;32m     24\u001b[0m     hps\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,          \u001b[38;5;66;03m#rigtig\u001b[39;00m\n\u001b[0;32m     25\u001b[0m     balanced\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m     26\u001b[0m     seed\u001b[38;5;241m=\u001b[39msettings[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mseed_no\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;66;03m#rigtig\u001b[39;00m\n\u001b[0;32m     27\u001b[0m )\n",
-      "Cell \u001b[1;32mIn[87], line 35\u001b[0m, in \u001b[0;36mpfml_implement\u001b[1;34m(data_tc, cov_list, lambda_list, risk_free, features, wealth, mu, gamma_rel, dates_full, dates_oos, lb, hp_years, rff_feat, scale, g_vec, p_vec, l_vec, orig_feat, iter, hps, balanced, seed)\u001b[0m\n\u001b[0;32m     29\u001b[0m feat_all \u001b[38;5;241m=\u001b[39m pfml_feat_fun(p\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mmax\u001b[39m(p_vec), orig_feat\u001b[38;5;241m=\u001b[39morig_feat)\n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m# Adjust pfml_input so that only the columns corresponding to feat_all remain.\u001b[39;00m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;66;03m#pfml_input = adjust_pfml_input(pfml_input, feat_all)\u001b[39;00m\n\u001b[0;32m     32\u001b[0m pfml_input \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreals\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\n\u001b[0;32m     34\u001b[0m         {\n\u001b[1;32m---> 35\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr_tilde\u001b[39m\u001b[38;5;124m\"\u001b[39m: item[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr_tilde\u001b[39m\u001b[38;5;124m\"\u001b[39m][feat_all],\n\u001b[0;32m     36\u001b[0m             \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m{key: value[np\u001b[38;5;241m.\u001b[39mix_(feat_all, feat_all)] \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m item\u001b[38;5;241m.\u001b[39mitems() \u001b[38;5;28;01mif\u001b[39;00m key \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr_tilde\u001b[39m\u001b[38;5;124m\"\u001b[39m}\n\u001b[0;32m     37\u001b[0m         }\n\u001b[0;32m     38\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m pfml_input[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreals\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     39\u001b[0m     ],\n\u001b[0;32m     40\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msignal_t\u001b[39m\u001b[38;5;124m\"\u001b[39m: [matrix[:, feat_all] \u001b[38;5;28;01mfor\u001b[39;00m matrix \u001b[38;5;129;01min\u001b[39;00m pfml_input[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msignal_t\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n\u001b[0;32m     41\u001b[0m }\n\u001b[0;32m     42\u001b[0m \u001b[38;5;66;03m# Coefficients\u001b[39;00m\n\u001b[0;32m     43\u001b[0m pfml_hp_coef \u001b[38;5;241m=\u001b[39m pfml_search_coef(pfml_input, p_vec\u001b[38;5;241m=\u001b[39mp_vec, l_vec\u001b[38;5;241m=\u001b[39ml_vec, hp_years\u001b[38;5;241m=\u001b[39mhp_years, orig_feat\u001b[38;5;241m=\u001b[39morig_feat)\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Start hyperparameter search (hvis hps ikke allerede er defineret)\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhps\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mglobals\u001b[39m() \u001b[38;5;129;01mor\u001b[39;00m hps \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m----> 3\u001b[0m     start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m      4\u001b[0m     hps \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m g \u001b[38;5;129;01min\u001b[39;00m settings[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpf_ml\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mg_vec\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'time' is not defined"
      ]
     }
    ],
